--- a/index.html
+++ b/index.html
@@ -500,6 +500,9 @@
         <div class="hero-buttons">
           <a class="btn-primary" href="#cards-itinerary">打開全部行程卡片 ⤵</a>
           <a class="btn-secondary" href="#cards-stay">先看住宿 & 機場交通</a>
+          <a class="btn-secondary" href="https://docs.google.com/document/d/1m9V2yH4teOhwyYqtaJeYy00iOJqka49aPOpss0SJvNo/edit?usp=sharing" target="_blank" rel="noopener">
+            行前備忘 Google Doc
+          </a>
         </div>
       </div>
 
@@ -603,14 +606,12 @@
                 <div class="timeline-item">
                   <div class="time">14:00–15:00</div>
                   <div class="activity">
-                    <strong>梅田空中庭園展望台</strong>：天神橋筋六丁目 → 東梅田 → 步行至空中庭園，周遊卡免費入場。
-                  </div>
+                    <strong>梅田空中庭園展望台</strong>：天神橋筋六丁目 → 東梅田 → 步行至空中庭園，周遊卡免費入場。</div>
                 </div>
                 <div class="timeline-item">
                   <div class="time">15:00–18:00</div>
                   <div class="activity">
-                    <strong>壽星專屬梅田逛街攻略</strong>：Grand Front → LUCUA 1100 → Onitsuka Tiger（阪急）→ 大丸梅田 & Zoff。
-                  </div>
+                    <strong>壽星專屬梅田逛街攻略</strong>：Grand Front → LUCUA 1100 → Onitsuka Tiger（阪急）→ 大丸梅田 & Zoff。</div>
                 </div>
                 <div class="timeline-item">
                   <div class="time">晚上</div>
@@ -862,7 +863,7 @@
               </p>
               <p>機場來回路線：關西空港 ⇄ 南海難波（南海電鐵，約 35–45 分鐘）＋ 難波步行 12–15 分鐘抵達日本橋住宿。</p>
 
-              <!-- 飯店外觀圖片：請把你的外觀照片存在 images/hotel-exterior.jpg -->
+              <!-- 飯店外觀圖片 -->
               <img src="images/hotel-exterior.jpg" alt="Grants Arita Nipponbashi 外觀" class="card-image" />
             </div>
           </article>
@@ -897,7 +898,7 @@
             </div>
             <div class="card-body">
               <p>這張地圖幫你把 Grand Front、LUCUA、阪急／阪神百貨、HEP FIVE 等位置全部標出來，實際逛街時可以對照著走。</p>
-              <!-- 梅田逛街地圖：請把圖片存成 images/umeda-shopping-map.jpg -->
+              <!-- 梅田逛街地圖 -->
               <img src="images/umeda-shopping-map.jpg" alt="梅田逛街地圖" class="card-image" />
             </div>
           </article>
