--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
               <p>機場來回路線：關西空港 ⇄ 南海難波（南海電鐵，約 35–45 分鐘）＋ 難波步行 12–15 分鐘抵達日本橋住宿。</p>
 
               <!-- 飯店外觀圖片 -->
-              <img src="images/hotel-exterior.jpg" alt="Grants Arita Nipponbashi 外觀" class="card-image" />
+              <img src="hotel-exterior.jpg" alt="Grants Arita Nipponbashi 外觀" class="card-image" />
             </div>
           </article>
 
@@ -899,7 +899,7 @@
             <div class="card-body">
               <p>這張地圖幫你把 Grand Front、LUCUA、阪急／阪神百貨、HEP FIVE 等位置全部標出來，實際逛街時可以對照著走。</p>
               <!-- 梅田逛街地圖 -->
-              <img src="images/umeda-shopping-map.jpg" alt="梅田逛街地圖" class="card-image" />
+              <img src="umeda-shopping-map.jpg" alt="梅田逛街地圖" class="card-image" />
             </div>
           </article>
         </div>
