--- a/index.html
+++ b/index.html
@@ -899,7 +899,9 @@
             <div class="card-body">
               <p>這張地圖幫你把 Grand Front、LUCUA、阪急／阪神百貨、HEP FIVE 等位置全部標出來，實際逛街時可以對照著走。</p>
               <!-- 梅田逛街地圖 -->
-              <img src="umeda-shopping-map.jpg" alt="梅田逛街地圖" class="card-image" />
+             <a href="umeda-shopping-map.jpg" target="_blank">
+  <img src="umeda-shopping-map.jpg" alt="梅田逛街地圖" class="card-image" />
+</a>
             </div>
           </article>
         </div>
