--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,16 @@
             <div class="card-header">
               <div class="card-label">Check List</div>
               <div class="card-title">每日交通費 & 票券小抄</div>
+              <div class="info-card">
+  <h4>大阪地鐵總覽（外部連結）</h4>
+  <p>
+    想快速確認大阪地鐵所有路線、轉乘方式、主要景點位置，可使用這個官方外部網站的完整路線圖：
+  </p>
+  <a href="https://metronine.osaka/tw/fullpage-course/" target="_blank" class="external-link">
+    👉 大阪 Metro 全區路線圖（Metro Nine）
+  </a>
+</div>
+
               <div class="card-sub">已付項目＋大概交通預算</div>
             </div>
             <div class="card-body">
