--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
         <a href="#cards-itinerary">行程卡片</a>
         <a href="#cards-stay">住宿 & 周邊</a>
         <a href="#cards-umeda">梅田逛街</a>
+         <a href="#cards-snacks">點心</a>
         <a href="#cards-usj">USJ</a>
         <a href="#cards-tips">小提醒</a>
         <a href="#cards-flight">機票</a>
@@ -576,77 +577,113 @@
             </div>
           </article>
 
-          <!-- Day 2 -->
-          <article class="card">
-            <div class="card-header">
-              <div class="card-label">Day 2 · 12/7（日）</div>
-              <div class="card-title">大阪周遊卡 Day 1 · 大阪城 + 今昔館 + 梅田逛街</div>
-              <div class="card-sub">經典市區景點 + 壽星梅田購物路線 + 道頓堀夜景</div>
-            </div>
-            <div class="card-body">
-              <div class="timeline">
-                <div class="timeline-item">
-                  <div class="time">09:00–10:30</div>
-                  <div class="activity">
-                    <strong>大阪城天守閣</strong>：日本橋 →（千日前線）→ 谷町九丁目 →（谷町線）→ 谷町四丁目 → 步行進大阪城公園。
-                  </div>
-                </div>
-                <div class="timeline-item">
-                  <div class="time">11:00–12:00</div>
-                  <div class="activity">
-                    <strong>大阪生活今昔館</strong>：谷町線北上至天神橋筋六丁目，出站直結大樓。
-                  </div>
-                </div>
-                <div class="timeline-item">
-                  <div class="time">12:30–13:30</div>
-                  <div class="activity">
-                    <strong>天神橋筋商店街午餐</strong>：在地商店街自由覓食。
-                  </div>
-                </div>
-                <div class="timeline-item">
-                  <div class="time">14:00–15:00</div>
-                  <div class="activity">
-                    <strong>梅田空中庭園展望台</strong>：天神橋筋六丁目 → 東梅田 → 步行至空中庭園，周遊卡免費入場。</div>
-                </div>
-                <div class="timeline-item">
-                  <div class="time">15:00–18:00</div>
-                  <div class="activity">
-                    <strong>壽星專屬梅田逛街攻略</strong>：Grand Front → LUCUA 1100 → Onitsuka Tiger（阪急）→ 大丸梅田 & Zoff。</div>
-                </div>
-                <div class="timeline-item">
-                  <div class="time">晚上</div>
-                  <div class="activity">
-                    <strong>御堂筋線 梅田 → 難波</strong>，再走去道頓堀／心齋橋夜遊 + 晚餐，最後走回住宿。
-                  </div>
-                </div>
-              </div>
+         <!-- Day 2 -->
+<article class="card">
+  <div class="card-header">
+    <div class="card-label">Day 2 · 12/7（日）</div>
+    <div class="card-title">大阪周遊卡 Day 1 · 大阪城 + 今昔館 + 天神橋美食 + 梅田逛街</div>
+    <div class="card-sub">經典市區景點 + 壽星梅田購物路線 + 天神橋吃好吃滿</div>
+  </div>
+  <div class="card-body">
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="time">09:00–10:30</div>
+        <div class="activity">
+          <strong>大阪城天守閣</strong>：日本橋 →（千日前線）→ 谷町九丁目 →（谷町線）→ 谷町四丁目 → 步行進大阪城公園。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">11:00–12:00</div>
+        <div class="activity">
+          <strong>大阪生活今昔館</strong>：谷町線北上至天神橋筋六丁目，出站直結大樓。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">12:00–13:30</div>
+        <div class="activity">
+          <strong>天神橋筋商店街午餐 + 小吃</strong>：在地鰻魚飯、可樂餅、章魚燒任選組合，吃到開心再出發。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">13:30–14:00</div>
+        <div class="activity">
+          <strong>大阪天滿宮小景點</strong>：從天神橋步行到大阪天滿宮，順便參拜學問之神、拍拍照片。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">14:00–15:00</div>
+        <div class="activity">
+          <strong>梅田空中庭園展望台</strong>：從天滿 / 南森町一帶搭地鐵往梅田，周遊卡免費入場。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">15:00–18:00</div>
+        <div class="activity">
+          <strong>壽星專屬梅田逛街攻略</strong>：Grand Front → LUCUA 1100 → Onitsuka Tiger（阪急）→ 大丸梅田 & Zoff，再視體力安排 grenier 布丁等甜點。
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="time">晚上</div>
+        <div class="activity">
+          <strong>御堂筋線 梅田 → 難波</strong>，再走去道頓堀／心齋橋夜遊 + 晚餐，有體力就順路買 LE CROISSANT 可頌，最後走回住宿。
+        </div>
+      </div>
+    </div>
 
-              <details>
-                <summary>展開詳細 <span>（每一段怎麼搭）</span></summary>
-                <div>
-                  <p>・日本橋 → 大阪城：</p>
-                  <ul class="card-list">
-                    <li>日本橋（千日前線，往南巽）→ 谷町九丁目（1 站）。</li>
-                    <li>谷町九丁目 轉谷町線（往大日）→ 谷町四丁目（2 站）。</li>
-                    <li>從 1-B 或 9 號出口出站，步行約 15 分鐘抵達天守閣區域。</li>
-                  </ul>
-                  <p>・谷町四丁目 → 天神橋筋六丁目（今昔館）：</p>
-                  <ul class="card-list">
-                    <li>谷町線（往大日方向）一路北上到天神橋筋六丁目（約 5 站）。</li>
-                  </ul>
-                  <p>・天神橋筋六丁目 → 梅田空中庭園：</p>
-                  <ul class="card-list">
-                    <li>天神橋筋六丁目（谷町線往八尾南）→ 東梅田（2 站），出站後走地下街到大阪站方向。</li>
-                    <li>再依指標走到空中庭園所在的梅田藍天大廈。</li>
-                  </ul>
-                  <p>・梅田逛街 → 難波：</p>
-                  <ul class="card-list">
-                    <li>任何一個梅田站入口 → 御堂筋線（往中百舌鳥 / 天王寺方向）→ 難波（約 8 分鐘）。</li>
-                  </ul>
-                </div>
-              </details>
-            </div>
-          </article>
+    <details>
+      <summary>展開詳細 <span>（地鐵路線 + 午餐選擇 + 大阪天滿宮）</span></summary>
+      <div>
+        <p><strong>日本橋 → 大阪城天守閣：</strong></p>
+        <ul class="card-list">
+          <li>日本橋（千日前線，往南巽）→ 谷町九丁目（1 站）。</li>
+          <li>谷町九丁目 轉谷町線（往大日）→ 谷町四丁目（2 站）。</li>
+          <li>從出口步行約 15 分鐘進入大阪城公園，前往天守閣。</li>
+        </ul>
+
+        <p><strong>大阪城 → 今昔館：</strong></p>
+        <ul class="card-list">
+          <li>谷町四丁目 → 谷町線（往大日方向）→ 天神橋筋六丁目，今昔館就位在同一棟大樓內。</li>
+        </ul>
+
+        <p><strong>今昔館周邊午餐 & 小吃推薦（天滿・天神橋筋一帶）：</strong></p>
+        <ul class="card-list">
+          <li>
+            <strong>炭燒鰻魚魚伊 天五店（炭焼きうなぎの魚伊 天五店）</strong><br />
+            地址：大阪府大阪市北区天神橋5-5-5<br />
+            交通：JR「天滿站」步行約 5 分鐘；Osaka Metro 谷町線「天神橋筋六丁目站」步行約 7 分鐘。<br />
+            官網：
+            <a href="https://www.sumiyaki-unagi.com/" target="_blank" rel="noopener">https://www.sumiyaki-unagi.com/</a>
+          </li>
+          <li>
+            <strong>章魚燒 UMAI屋（たこ焼き うまい屋）</strong><br />
+            地址：大阪府大阪市北区浪花町4-21<br />
+            交通：谷町線「天神橋筋六丁目站」步行約 3 分鐘；JR「天滿站」步行約 5 分鐘。<br />
+            適合當作「午餐後散步再加一份小吃」。
+          </li>
+          <li>
+            <strong>天神橋 中村屋</strong><br />
+            地址：大阪府大阪市北区天神橋2-3-21<br />
+            交通：Osaka Metro 谷町線「南森町站」步行約 2 分鐘。<br />
+            走到南森町一帶時，可以順便買可樂餅或炸物當路上點心。
+          </li>
+        </ul>
+
+        <p><strong>大阪天滿宮（大阪天満宮）：</strong></p>
+        <ul class="card-list">
+          <li>地址：2 Chome-1-8 Tenjinbashi, Kita Ward, Osaka, 530-0041 日本。</li>
+          <li>供奉學問之神菅原道真，是學生與考生會來祈求學業・考試的熱門神社。</li>
+          <li>從天神橋筋商店街一帶步行即可到達，吃飽後散步過去剛剛好。</li>
+        </ul>
+
+        <p><strong>大阪天滿宮 → 梅田：</strong></p>
+        <ul class="card-list">
+          <li>從南森町站搭谷町線或堺筋線 → 在東梅田 / 扇町等站轉乘，依當天狀況選最順的動線即可。</li>
+        </ul>
+      </div>
+    </details>
+  </div>
+</article>
+
 
           <!-- Day 3 -->
           <article class="card">
@@ -956,6 +993,56 @@
                 <li><strong>唐吉訶德 梅田本店：</strong>零食、藥妝、雜物一網打盡，適合當最後一站。</li>
                 <li><strong>HEP FIVE：</strong>年輕潮牌與紅色摩天輪，想拍有活力照片可以來。</li>
               </ul>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!-- 想吃點心清單 -->
+      <section id="cards-snacks">
+        <div class="section-title">
+          <h2>🍰 想吃點心清單 · 甜點動線排好好的</h2>
+          <span>依照行程順路安排，哪一天、哪個時段吃最剛好</span>
+        </div>
+
+        <div class="card-grid">
+          <article class="card">
+            <div class="card-header">
+              <div class="card-label">Snacks</div>
+              <div class="card-title">這趟大阪想吃的點心 · 推薦安排日</div>
+              <div class="card-sub">以「不繞路」為原則排進每日行程，邊玩邊吃最舒服</div>
+            </div>
+            <div class="card-body">
+              <ul class="card-list">
+                <li>
+                  <strong>Happy Camper Bagel（貝果）</strong><br />
+                  地址：大阪市北區天神橋3-7-24<br />
+                  營業時間：11:00–18:00（週日公休）<br />
+                  <strong>推薦安排：</strong>
+                  <span>🟦 Day 2（今昔館之後 → 天神橋午餐前後）</span><br />
+                  從大阪生活今昔館（天神橋筋六丁目）散步過去大約十幾分鐘，可以先買貝果當午餐的一部份或下午點心，再接著去天神橋商店街吃鰻魚飯／章魚燒。
+                </li>
+
+                <li>
+                  <strong>LE CROISSANT（可頌）</strong><br />
+                  地址：大阪市中央区心斎橋筋 2-7-25-1F<br />
+                  營業時間：11:30–20:30<br />
+                  <strong>推薦安排：</strong>
+                  <span>🟦 Day 2 晚上（道頓堀／心齋橋夜逛時順路）、🟪 Day 3 晚上當備用</span><br />
+                  就在心齋橋最熱鬧的商店街上，晚上逛街時路過買一、兩個當散步點心，吃完再慢慢走回日本橋，很適合當「回家前的小收尾」。
+                </li>
+
+                <li>
+                  <strong>grenier 梅田店（布丁等甜點）</strong><br />
+                  （梅田地下街 / 大阪站一帶）<br />
+                  <strong>推薦安排：</strong>
+                  <span>🟦 Day 2 下午（梅田逛街中途休息時）</span><br />
+                  下午在 Grand Front、LUCUA、阪急百貨一帶逛到一半的時候，可以特地繞去 grenier 吃布丁或其他甜點，當作「壽星下午茶」，吃完再回到梅田逛街路線上。
+                </li>
+              </ul>
+
+              <p style="margin-top:8px;">
+                <strong>小結：</strong>Day 2 是甜點最密集的一天：早上今昔館、午餐前後在天神橋吃貝果＋在地小吃，下午梅田吃 grenier 布丁，晚上心齋橋買可頌；Day 3 晚上如果還有力氣，也可以再去一次 LE CROISSANT 補吃。
+              </p>
             </div>
           </article>
         </div>
