--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
         <a href="#cards-tips">小提醒</a>
         <a href="#cards-flight">機票</a>
         <a href="#cards-coupon">兌換券</a>
+        <a href="account.html">記帳</a>
       </div>
     </nav>
   </header>
