--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
   <!-- 封面：AXE 寫真滑動＋開始按鈕 -->
   <div class="intro" id="intro">
     <div class="intro-card">
-      <div class="intro-title">AXE OSAKA BIRTHDAY TRIP</div>
-      <div class="intro-subtitle">給台灣摔角顏值巔峰王宏逸的一趟 6 天 5 夜生日旅行</div>
+      <div class="intro-title">AXE Wang OSAKA BIRTHDAY TRIP</div>
+      <div class="intro-subtitle">給台灣摔角顏值巔峰Axe Wang的一趟 6 天 5 夜生日旅行</div>
 
       <div class="intro-photos-wrapper">
         <div class="intro-photos" id="introPhotos">
@@ -529,12 +529,12 @@
       </div>
 
       <div class="intro-message">
-        這不是一般的觀光行程，而是宏逸專屬的生日企劃。從大阪城天守閣、通天閣、USJ，到港區散步和摔角酒吧，每一張卡片、每一段路線，都藏著小肥豬精心排好的伏筆和驚喜。
+        這不是一般的觀光行程，而是Axe Wang專屬的生日企劃。希望在每天的旅程都可以感受到小肥豬精心排好的伏筆和驚喜。
       </div>
 
       <div class="intro-cta">
         <button class="intro-btn" id="startTripBtn">
-          <span>🎉 開始生日旅行</span>
+          <span>🎉 一緒に行く</span>
         </button>
         <div class="intro-hint">左右滑動上方寫真，可以先複習一下自己的帥度。</div>
       </div>
