--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
   <!-- Intro overlay with AXE 寫真 -->
   <div class="intro-overlay" id="intro">
     <div style="text-align:center; margin-bottom: 8px;">
-      <div class="intro-title">AXE OSAKA BIRTHDAY TRIP</div>
+      <div class="intro-title">AXE WANG OSAKA BIRTHDAY TRIP</div>
       <div class="intro-sub">
         給台灣摔角顏值巔峰 Axe Wang 的專屬生日網站。<br />
         請先欣賞一下本人的帥度，再進入行程。
@@ -428,12 +428,12 @@
 
   <div class="page" id="top">
     <div class="hero">
-      <div class="hero-title">AXE OSAKA BIRTHDAY TRIP</div>
+      <div class="hero-title">AXE WANG OSAKA BIRTHDAY TRIP</div>
       <div class="trip-main-title">宏逸大阪生日旅行 · 6 天 5 夜卡片行程</div>
       <div class="trip-sub">給台灣摔角顏值巔峰王宏逸的一趟 6 天 5 夜生日旅行</div>
       <div class="trip-meta">2025 / 12 / 6（六）～ 12 / 11（四） · 日本 · 大阪</div>
       <div class="trip-tagline">
-        小肥豬專屬企劃 · 無印良品手帳風 · 交通、票券、點心與驚喜一次整理好
+        小肥豬專屬企劃 99熊掛名贊助 交通、票券、點心與驚喜一次整理好
       </div>
       <div id="countdown">距離出發還有：計算中...</div>
     </div>
