--- a/index.html
+++ b/index.html
@@ -472,9 +472,9 @@
       <img src="axe-photo3.jpg" alt="AXE Photo 3" />
     </div>
 
-    <div class="intro-tip">⬅️  左右滑動照片 · 練習一下做壽星的自覺。</div>
+    <div class="intro-tip">送你帥照。</div>
 
-    <button class="intro-btn" id="enterTrip">開始生日旅行</button>
+    <button class="intro-btn" id="enterTrip"> 一緒に旅行へ行きましょう</button>
   </div>
 
   <audio id="bgm" src="bgm.mp3" loop></audio>
