--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
         地址：542-0073 大阪府大阪市中央區日本橋 2-18-17。鄰近難波、日本橋站，步行約 8 分鐘可達。
       </p>
       <img
-        src="圖片/飯店外觀.jpg"
+        src="hotel-exterior.jpg"
         alt="Grants Arita Nipponbashi 外觀"
         class="img-inline"
       />
