--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
       />
       <p>
         <a
-          href="https://share.google/iH41o32AntPprDViH"
+          href="https://maps.app.goo.gl/oM7fjTU116r27o4E9"
           target="_blank"
         >
           在 Google Maps 開啟住宿定位
